--- a/style/thankyou.css
+++ b/style/thankyou.css
@@ -1,3 +1,15 @@
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2bdddd3e;
+    border-radius: 10px;
+    width: 50%;
+    height: 20em;
+    filter: drop-shadow(black 0rem 0rem 1rem);
+    backdrop-filter: blur(5px);
+    border: 1px solid #21a2a2;
+}
 *{
     margin: 0;
     padding: 0;
@@ -13,6 +25,7 @@
 body{
     background-color: black;
     font-family: 'Rubik', sans-serif;
+    overflow: hidden;
 }
 
 #container-positioning{
@@ -22,251 +35,27 @@ body{
     align-items: center;
     justify-content: center;
     background: url(../Media/layered-waves-haikei.svg) no-repeat center center/cover;
-    height: 130vh;
+    height: 100vh;
 }
 
-.container{
-    background-color: #2bdddd3e;
-    border-radius: 10px;
-    width: 70%;
-    height: 53em;
-    filter: drop-shadow(black 0rem 0rem 1rem);
-    backdrop-filter: blur(5px);
-    border: 1px solid #21a2a2;
-}
-
-#topbar{
+.thankyou{
+    color: var(--text-color);
     display: flex;
-    justify-content: space-between;
-    margin: 1rem 1rem 0 1.8rem;
-    z-index: 1;
-}
-
-
-.logo1{
-    width: 60px;
-    filter: invert(0.9) drop-shadow(black 0 0 .2rem);
-}
-
-/* .language{
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    gap: 4rem;
     align-items: center;
-    height: 1.5rem;
-    padding: .3rem .8rem;
-    border-radius: 22px;
-    background-color: #000a11;
-    color: var(--text-color);
-    cursor: pointer;
-    filter: drop-shadow(black 0 0 .2rem);
-} */
-
-#country{
-    -webkit-appearance: none;
-    background-color: transparent;
-    border-top-style: hidden;
-    border-right-style: hidden;
-    border-left-style: hidden;
-    border-bottom-style: groove;
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 2.5rem;
-    padding: .3rem .8rem;
-    border-radius: 22px;
-    background-color: #000a11;
-    color: var(--text-color);
-    cursor: pointer;
-    filter: drop-shadow(black 0 0 .2rem);
-}
-
-#country:focus{
-    outline: none;
-    color: var(--text-color);
-}
-
-#country:checked{
-    color:#21a2a2;
-}
-
-.left-and-form{
-    display: flex;
-}
-
-div#left{
-    width: 35%;
-}
-#tagline{
-    display: flex;
     flex-direction: column;
-    margin: 1rem 0 0 2rem;
-    color: var(--text-color);
-    width: 50%;
-    cursor: default;
+    font-size: 1.7rem;
+}
+.thankyou>h4 , .thankyou>p{
+    filter: drop-shadow(0px 0px 1rem rgb(29,117,117));
 }
 
-.tagline3{
-    letter-spacing: 1.5rem;
-}
-
-#tagline>p{
-    margin-top: 1rem;
-    cursor: default;
-    width: 13rem;
-}
-
-.center-img{
-    width: 600px;
-    z-index: 1;
-    position: absolute;
-    bottom: 0;
-    left: 10%;
-}
-
-
-div#form{
-    background-color: #000a11;
-    width: 70%;
-    height: 42em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    color: rgb(213, 213, 213);
-    padding: 1.5rem;
-    border-radius: 20px;
-    filter: drop-shadow(black 0 0 .1rem);
-}
-
-.sign-up-header{
-    font-size: 2rem;
-    cursor: default;
-}
-
-.social-signups{
-    display: flex;
-    gap: 1rem;
-    
-}
-
-.social-signup-btns{
-    border: 1px solid rgb(70, 70, 70);
-    padding: .5rem 1rem;
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-    border-radius: 20px;
-    cursor: pointer;
-    background-color: #202020;
-    color: var(--text-color);
-    transition: all 0.4s ease;
-}
-.social-signup-btns:hover{
-    filter: invert(1);
-}
-
-.sign-up-or-header{
-    font-size: 2rem;
-    cursor: default;
-}
-
-#signup-inputs>form{
-    display: flex;
-    flex-direction: column;
-    background: #121d25;
-    padding: 4rem 4rem;
-    gap: 1rem;
-    backdrop-filter: blur(10px);
-    border-radius: 20px;
-}
-
-.inputs{
-    padding: 1rem;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    background-color: transparent;
-    caret-color: #21a2a2;
-    color: var(--text-color);
-    transition: all ease 0.4s;
-    border-bottom: 2px solid #21a2a2;
-}
-
-.inputs:focus{
-    outline: none; 
-    border-bottom: 2px solid #21a2a2;
-}
-
-.inputs:active{
-    border-bottom: 2px solid #21a2a2;
-}
-
-.inputs:invalid{
-    border-bottom: 2px solid #c63d3d;
-}
-.inputs:valid{
-    border-bottom: 2px solid #05e205;
-}
-
-
-.sign-up-button{
-    width: 5rem;
-    height: 2rem;
-    border: 1px solid #21a2a2;
-    background-color: #000a11;
-    color: var(--text-color);
-    border-radius: 20px;
-    cursor: pointer;
-    transition: all 0.2s ease;
-}
-
-.sign-up-button:hover{
-    border: 1px solid #000000;
-    background-color: #21a2a2;
-    color: #ffffff;
-    filter: drop-shadow(black 0 0 1rem);
-}
-
-.password-container{
-    display: flex;
-    align-items: baseline;
-}
-
-.error{
-    font-size: 0.8rem;
-    width: 17rem;
-    height: 2.5rem;
-}
-
-.fa-eye{
-    cursor: pointer;
-}
-#show-container{
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    color: var(--text-color);
-    width: 1rem;
-}
-
-a{
-    color:#21a2a2;
-}
-
-.tandc{
-    font-size: 0.8rem;
-}
 .penguin-container{
-    z-index: 1;
     position: absolute;
-    top: 30em;
-    left: 28em;
     filter: drop-shadow(1rem 1rem 1rem black);
+    transform: scale(2.05);
+    left: 9em;
 }
 .penguin {
     width: 300px;
