--- a/style/thankyou.css
+++ b/style/thankyou.css
@@ -1,5 +1,6 @@
 .container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #2bdddd3e;
@@ -42,13 +43,25 @@ body{
     color: var(--text-color);
     display: flex;
     justify-content: space-evenly;
-    gap: 4rem;
+    gap: 2rem;
     align-items: center;
     flex-direction: column;
     font-size: 1.7rem;
 }
 .thankyou>h4 , .thankyou>p{
-    filter: drop-shadow(0px 0px 1rem rgb(29,117,117));
+    filter: drop-shadow(0px 0px 1rem rgb(0, 0, 0));
+}
+.counter{
+  color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+  margin-top: 1rem;
+  font-size: 1.5rem;
+}
+#counter{
+  filter: drop-shadow(0px 0px 1rem rgb(0, 0, 0));
 }
 
 .penguin-container{
