--- a/style/459.css
+++ b/style/459.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     width: 12em;
-    background: #121d25;
     padding: 1rem 1rem;
     gap: .5rem;
     backdrop-filter: blur(10px);
@@ -12,4 +11,7 @@
     font-size: 0.6rem;
     width: 12rem;
     height: 2rem;
+}
+#container-positioning{
+    height: 100vh;
 }
