--- a/style/thankyou.css
+++ b/style/thankyou.css
@@ -35,7 +35,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(../Media/layered-waves-haikei.svg) no-repeat center center/cover;
+    background: url(../Media/dark-bg.svg) no-repeat center center/cover;
     height: 100vh;
 }
 
