--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@
     --form-bg: #000a11;
     --sign-btn-bg: #202020;
     --input-bg: #121d25;
+    --bg: url(Media/dark-bg.svg) no-repeat center center/cover;
 }
 @media (prefers-color-scheme: light) {
   :root {
@@ -20,6 +21,7 @@
     --form-bg: rgb(216,219,224);
     --sign-btn-bg: #DFDFDF;
     --input-bg: rgb(231,231,231);
+    --bg: url(Media/layered-waves-haikei.svg) no-repeat center center/cover;
 }
   }
 
@@ -102,7 +104,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(../Media/dark-bg.svg) no-repeat center center/cover;
+    background: var(--bg);
 }
 
 .container{
