--- a/style/style.css
+++ b/style/style.css
@@ -13,9 +13,18 @@
     --sign-btn-bg: #202020;
     --input-bg: #121d25;
 }
+@media (prefers-color-scheme: dark){
+  #container-positioning{
+    background: url(..\Media\dark-bg.svg) no-repeat center center/cover;
+  }
+  body{
+    background-color: rgb(49,143,143);
+  }
+}
+
 body{
-    background-color: black;
     font-family: 'Rubik', sans-serif;
+    background: rgb(26,86,86);
 }
 .social-container{
   display:flex;
@@ -92,7 +101,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(..\Media\dark-bg.svg) no-repeat center center/cover;
+    background: url(..\Media\layered-waves-haikei.svg) no-repeat center center/cover;
 }
 
 .container{
