--- a/style/style.css
+++ b/style/style.css
@@ -97,7 +97,7 @@ body {
 
 #container-positioning {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -343,10 +343,10 @@ a {
 .penguin-container {
   z-index: 1;
   position: absolute;
-  top: 30em;
-  left: 28em;
+  top: 35em;
+  left: 33em;
   filter: drop-shadow(1rem 1rem 1rem black);
-  scale: 0.8;
+  scale: .9;
 }
 .penguin {
   width: 300px;
